Enhance terms.html with CSS styling
Added styles for layout and typography to terms.html.

--- a/terms.html
+++ b/terms.html
@@ -4,121 +4,237 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms of Use</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            line-height: 1.8;
+            color: #333;
+            background: #f9fafb;
+        }
+
+        header {
+            background: white;
+            border-bottom: 1px solid #e5e7eb;
+            padding: 20px 0;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .logo {
+            max-width: 180px;
+            height: auto;
+        }
+
+        main {
+            background: white;
+            margin: 40px auto;
+            padding: 60px;
+            border-radius: 8px;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+            max-width: 900px;
+        }
+
+        .page-title {
+            font-size: 2.5em;
+            font-weight: 700;
+            color: #1a202c;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+
+        .last-updated {
+            text-align: center;
+            color: #6b7280;
+            font-size: 0.95em;
+            margin-bottom: 50px;
+            font-weight: 500;
+        }
+
+        h2 {
+            font-size: 1.5em;
+            font-weight: 600;
+            color: #2563eb;
+            margin-top: 40px;
+            margin-bottom: 15px;
+            padding-bottom: 8px;
+            border-bottom: 2px solid #e5e7eb;
+        }
+
+        h2:first-of-type {
+            margin-top: 0;
+        }
+
+        p {
+            margin-bottom: 15px;
+            color: #4b5563;
+            text-align: justify;
+        }
+
+        ul {
+            margin: 15px 0 15px 30px;
+            color: #4b5563;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        strong {
+            color: #1f2937;
+        }
+
+        footer {
+            background: #1f2937;
+            color: white;
+            text-align: center;
+            padding: 30px 20px;
+            margin-top: 60px;
+        }
+
+        footer a {
+            color: #60a5fa;
+            text-decoration: none;
+            margin: 0 10px;
+            transition: color 0.3s;
+        }
+
+        footer a:hover {
+            color: #93c5fd;
+            text-decoration: underline;
+        }
+
+        .separator {
+            color: #9ca3af;
+            margin: 0 5px;
+        }
+
+        @media (max-width: 768px) {
+            main {
+                padding: 30px 20px;
+                margin: 20px 10px;
+            }
+
+            .page-title {
+                font-size: 2em;
+            }
+
+            h2 {
+                font-size: 1.3em;
+            }
+        }
+    </style>
 </head>
 <body>
     <header>
         <div class="container">
-            <a href="index.html"><img src="logo.png" alt="Логотип" class="logo"></a>
+            <a href="index.html"><img src="logo.png" alt="Logo" class="logo"></a>
         </div>
     </header>
     
-    <main class="container">
-        <h1>Terms of Use</h1>
-        <p>
-          # Terms of Use
+    <main>
+        <h1 class="page-title">Terms of Use</h1>
+        <p class="last-updated"><strong>Last Updated: October 5, 2025</strong></p>
 
-    **Last Updated: October 5, 2025**
+        <h2>1. Acceptance of Terms</h2>
+        <p>By downloading, installing, or using this book reading application ("App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App.</p>
 
-    ## 1. Acceptance of Terms
+        <h2>2. License to Use</h2>
+        <p>We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for personal, non-commercial purposes in accordance with these Terms and the Apple App Store Terms of Service.</p>
 
-    By downloading, installing, or using this book reading application ("App"), you agree to be bound by these Terms of Use. If you do not agree to these terms, do not use the App.
+        <h2>3. Description of Service</h2>
+        <p>The App is a book reading application that allows you to:</p>
+        <ul>
+            <li>Import and read your own books</li>
+            <li>Organize your personal book library</li>
+            <li>Use reading tools and features</li>
+        </ul>
+        <p>The App does not provide any copyrighted content. You are solely responsible for ensuring you have the legal right to access and read any books you import into the App.</p>
 
-    ## 2. License to Use
+        <h2>4. User Responsibilities</h2>
+        <p>You agree that:</p>
+        <ul>
+            <li>You will only import books that you own or have legal rights to access</li>
+            <li>You will not use the App to access, store, or distribute copyrighted material without proper authorization</li>
+            <li>You are solely responsible for all content you import into the App</li>
+            <li>You will comply with all applicable copyright laws and regulations</li>
+        </ul>
 
-    We grant you a limited, non-exclusive, non-transferable, revocable license to use the App for personal, non-commercial purposes in accordance with these Terms and the Apple App Store Terms of Service.
+        <h2>5. Data Storage and Privacy</h2>
+        <p>The App does not collect, store, or transmit any personal information or user data to our servers. All books and data are stored:</p>
+        <ul>
+            <li>Locally on your device</li>
+            <li>In your personal Apple iCloud account (if iCloud sync is enabled)</li>
+        </ul>
+        <p>Your iCloud storage is protected by Apple's security measures and is subject to Apple's Privacy Policy and iCloud Terms of Service. We do not have access to your iCloud data.</p>
 
-    ## 3. Description of Service
+        <h2>6. User Conduct</h2>
+        <p>You agree not to:</p>
+        <ul>
+            <li>Use the App for any illegal purposes</li>
+            <li>Violate any applicable laws or regulations, including copyright laws</li>
+            <li>Attempt to gain unauthorized access to the App or its systems</li>
+            <li>Modify, reverse engineer, or create derivative works of the App</li>
+            <li>Distribute or share copyrighted content without authorization</li>
+        </ul>
 
-    The App is a book reading application that allows you to:
-    - Import and read your own books
-    - Organize your personal book library
-    - Use reading tools and features
+        <h2>7. Intellectual Property</h2>
+        <p>All features and functionality of the App itself are owned by us and are protected by copyright, trademark, and other intellectual property laws. This does not include any books or content you import, which remain your property or the property of their respective copyright holders.</p>
 
-    The App does not provide any copyrighted content. You are solely responsible for ensuring you have the legal right to access and read any books you import into the App.
+        <h2>8. Disclaimers</h2>
+        <p>THE APP IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT. WE DO NOT GUARANTEE THAT THE APP WILL BE ERROR-FREE OR UNINTERRUPTED.</p>
 
-    ## 4. User Responsibilities
+        <h2>9. Limitation of Liability</h2>
+        <p>TO THE MAXIMUM EXTENT PERMITTED BY LAW, WE SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES ARISING OUT OF OR RELATED TO YOUR USE OF THE APP, INCLUDING BUT NOT LIMITED TO LOSS OF DATA OR BOOKS STORED ON YOUR DEVICE OR IN YOUR iCloud ACCOUNT.</p>
 
-    You agree that:
-    - You will only import books that you own or have legal rights to access
-    - You will not use the App to access, store, or distribute copyrighted material without proper authorization
-    - You are solely responsible for all content you import into the App
-    - You will comply with all applicable copyright laws and regulations
+        <h2>10. iCloud Integration</h2>
+        <p>If you choose to use iCloud sync:</p>
+        <ul>
+            <li>Your data is stored in your personal Apple iCloud account</li>
+            <li>iCloud sync is subject to Apple's Terms of Service</li>
+            <li>You are responsible for managing your iCloud storage space</li>
+            <li>We are not responsible for any data loss or issues related to iCloud functionality</li>
+        </ul>
 
-    ## 5. Data Storage and Privacy
+        <h2>11. Copyright Compliance</h2>
+        <p>You acknowledge that you are solely responsible for ensuring that your use of the App complies with all applicable copyright laws. We assume no responsibility for any copyright infringement that may result from your use of the App.</p>
 
-    The App does not collect, store, or transmit any personal information or user data to our servers. All books and data are stored:
-    - Locally on your device
-    - In your personal Apple iCloud account (if iCloud sync is enabled)
+        <h2>12. Modifications to Terms</h2>
+        <p>We reserve the right to modify these Terms at any time. We will notify you of any material changes through the App or the App Store. Continued use of the App after changes constitutes acceptance of the modified Terms.</p>
 
-    Your iCloud storage is protected by Apple's security measures and is subject to Apple's Privacy Policy and iCloud Terms of Service. We do not have access to your iCloud data.
+        <h2>13. Modifications to the App</h2>
+        <p>We reserve the right to modify, suspend, or discontinue the App or any features at any time without notice.</p>
 
-    ## 6. User Conduct
+        <h2>14. Termination</h2>
+        <p>We may suspend or terminate your access to the App for violation of these Terms. You may stop using the App at any time by deleting it from your device.</p>
 
-    You agree not to:
-    - Use the App for any illegal purposes
-    - Violate any applicable laws or regulations, including copyright laws
-    - Attempt to gain unauthorized access to the App or its systems
-    - Modify, reverse engineer, or create derivative works of the App
-    - Distribute or share copyrighted content without authorization
+        <h2>15. Governing Law</h2>
+        <p>These Terms are governed by the laws of the United States and the State of California, without regard to its conflict of law provisions.</p>
 
-    ## 7. Intellectual Property
+        <h2>16. Severability</h2>
+        <p>If any provision of these Terms is found to be unenforceable, the remaining provisions will remain in full force and effect.</p>
 
-    All features and functionality of the App itself are owned by us and are protected by copyright, trademark, and other intellectual property laws. This does not include any books or content you import, which remain your property or the property of their respective copyright holders.
+        <h2>17. Entire Agreement</h2>
+        <p>These Terms constitute the entire agreement between you and us regarding the use of the App.</p>
 
-    ## 8. Disclaimers
-
-    THE APP IS PROVIDED "AS IS" WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, OR NON-INFRINGEMENT. WE DO NOT GUARANTEE THAT THE APP WILL BE ERROR-FREE OR UNINTERRUPTED.
-
-    ## 9. Limitation of Liability
-
-    TO THE MAXIMUM EXTENT PERMITTED BY LAW, WE SHALL NOT BE LIABLE FOR ANY INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL, OR PUNITIVE DAMAGES ARISING OUT OF OR RELATED TO YOUR USE OF THE APP, INCLUDING BUT NOT LIMITED TO LOSS OF DATA OR BOOKS STORED ON YOUR DEVICE OR IN YOUR iCloud ACCOUNT.
-
-    ## 10. iCloud Integration
-
-    If you choose to use iCloud sync:
-    - Your data is stored in your personal Apple iCloud account
-    - iCloud sync is subject to Apple's Terms of Service
-    - You are responsible for managing your iCloud storage space
-    - We are not responsible for any data loss or issues related to iCloud functionality
-
-    ## 11. Copyright Compliance
-
-    You acknowledge that you are solely responsible for ensuring that your use of the App complies with all applicable copyright laws. We assume no responsibility for any copyright infringement that may result from your use of the App.
-
-    ## 12. Modifications to Terms
-
-    We reserve the right to modify these Terms at any time. We will notify you of any material changes through the App or the App Store. Continued use of the App after changes constitutes acceptance of the modified Terms.
-
-    ## 13. Modifications to the App
-
-    We reserve the right to modify, suspend, or discontinue the App or any features at any time without notice.
-
-    ## 14. Termination
-
-    We may suspend or terminate your access to the App for violation of these Terms. You may stop using the App at any time by deleting it from your device.
-
-    ## 15. Governing Law
-
-    These Terms are governed by the laws of the United States and the State of California, without regard to its conflict of law provisions.
-
-    ## 16. Severability
-
-    If any provision of these Terms is found to be unenforceable, the remaining provisions will remain in full force and effect.
-
-    ## 17. Entire Agreement
-
-    These Terms constitute the entire agreement between you and us regarding the use of the App.
-
-    ## 18. Contact Information
-
-    For questions about these Terms, please refer to the contact information provided on our Apple App Store listing.
-        </p>
+        <h2>18. Contact Information</h2>
+        <p>For questions about these Terms, please refer to the contact information provided on our Apple App Store listing.</p>
     </main>
     
     <footer>
         <div class="container">
-            <a href="index.html">Home</a> | 
+            <a href="index.html">Home</a>
+            <span class="separator">|</span>
             <a href="privacy.html">Privacy Policy</a>
         </div>
     </footer>
