--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Scroll Reader</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -31,9 +34,28 @@
             padding: 0 20px;
         }
 
+        .header-content {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+            display: flex;
+            align-items: center;
+            gap: 20px;
+        }
+
         .logo {
-            max-width: 180px;
+            max-width: 80px;
             height: auto;
+            display: block;
+        }
+
+        .app-name {
+            font-family: 'Russo One', sans-serif;
+            font-size: 2.5em;
+            color: #9bff00;
+            letter-spacing: 2px;
+            margin: 0;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
         }
 
         main {
@@ -146,6 +168,15 @@
         }
 
         @media (max-width: 768px) {
+            .app-name {
+                font-size: 1.5em;
+                letter-spacing: 1px;
+            }
+
+            .logo {
+                max-width: 60px;
+            }
+
             main {
                 padding: 30px 20px;
                 margin: 20px 10px;
@@ -167,8 +198,9 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <a href="index.html"><img src="logo.png" alt="Logo" class="logo"></a>
+        <div class="header-content">
+            <a href="index.html"><img src="logo.png" alt="Scroll Reader Logo" class="logo"></a>
+            <h1 class="app-name">Scroll Reader</h1>
         </div>
     </header>
     
