--- a/privacy.html
+++ b/privacy.html
@@ -222,7 +222,7 @@
             en: {
                 title: "Privacy Policy",
                 lastUpdated: "Last Updated: October 5, 2025",
-                highlightText: "We do not collect any personal information or user data. The app uses the camera if you enable the gaze-based scrolling feature. In this case, the camera is used solely and exclusively for detecting the direction of your gaze in order to perform text scrolling. No data about your face, images, gaze direction, or any other information from the camera is collected, stored, or transmitted anywhere.",
+                highlightText: "We do not collect any personal information or user data.<br>The app uses the camera if you enable the gaze-based scrolling feature. In this case, the camera is used solely and exclusively for detecting the direction of your gaze in order to perform text scrolling. No data about your face, images, gaze direction, or any other information from the camera is collected, stored, or transmitted anywhere.",
                 intro: "This Privacy Policy describes how our book reading application (\"App\") handles your information. We are committed to protecting your privacy and being transparent about our data practices.",
                 infoCollect: "The App does not:",
                 infoList: [
