--- a/privacy.html
+++ b/privacy.html
@@ -222,7 +222,7 @@
             en: {
                 title: "Privacy Policy",
                 lastUpdated: "Last Updated: October 5, 2025",
-                highlightText: "We do not collect any personal information or user data.<br>The app uses the camera if you enable the gaze-based scrolling feature. In this case, the camera is used solely and exclusively for detecting the direction of your gaze in order to perform text scrolling. No data about your face, images, gaze direction, or any other information from the camera is collected, stored, or transmitted anywhere.",
+                highlightText: "We do not collect any personal information or user data.<br><br>The app uses the camera if you enable the gaze-based scrolling feature.<br>In this case, the camera is used solely and exclusively for detecting the direction of your gaze in order to perform text scrolling. No data about your face, images, gaze direction, or any other information from the camera is collected, stored, or transmitted anywhere.",
                 intro: "This Privacy Policy describes how our book reading application (\"App\") handles your information. We are committed to protecting your privacy and being transparent about our data practices.",
                 infoCollect: "The App does not:",
                 infoList: [
@@ -281,7 +281,7 @@
             ru: {
                 title: "Политика конфиденциальности",
                 lastUpdated: "Последнее обновление: 5 октября 2025 г.",
-                highlightText: "Мы не собираем никакой личной информации или пользовательских данных. Приложение использует камеру, если вы включите функцию прокрутки с помощью взгляда. При этом камера используется только и исключительно для определения направления вашего взгляда в целях осуществления прокрутки текста. Никакие данные о лице, изображениях, направлении взгляда и другая информация с камеры не собираются, не сохраняются и никуда не передаются.",
+                highlightText: "Мы не собираем никакой личной информации или пользовательских данных.<br><br>Приложение использует камеру, если вы включите функцию прокрутки с помощью взгляда.<br>При этом камера используется только и исключительно для определения направления вашего взгляда в целях осуществления прокрутки текста. Никакие данные о лице, изображениях, направлении взгляда и другая информация с камеры не собираются, не сохраняются и никуда не передаются.",
                 intro: "Настоящая Политика конфиденциальности описывает, как наше приложение для чтения книг («Приложение») обрабатывает вашу информацию. Мы стремимся защищать вашу конфиденциальность и быть прозрачными в отношении наших методов работы с данными.",
                 infoCollect: "Приложение не:",
                 infoList: [
